<resources>
    <string name="app_name">expenses-app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Log in</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login">Login</string>
    <string name="edit_expense_label">Edit Expense</string>
    <string name="list_expenses_label">Expenses List</string>
    <string name="price">Price:</string>
    <string name="with_credit_card">With credit card:</string>
    <string name="product">Product:</string>
    <string name="date">Date:</string>
</resources>